# knots

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: docs.yml
doc/: Makefile
doc/source/: api.rst  conf.py  demos.py  demos.rst  index.rst
scripts/: editor.py  readme_images.py  scratch.py  spline.py
src/knots/: demos.py  display.py  editor.py  grid.py  path.py  spline.py  transforms.py
